# MangaJaNaiConverterGui

./: .gitignore  MangaJaNaiConverterGui.sln  README.md  pack.bat
.github/workflows/: deploy.yml
MangaJaNaiConverterGui/: App.axaml  App.axaml.cs  ETACalculator.cs  MangaJaNaiConverterGui.csproj  MemoryLogger.cs  NewtonsoftJsonSuspensionDriver.cs  Program.cs  ViewLocator.cs  app.manifest  appstate.json  appstate2.json
MangaJaNaiConverterGui/Drivers/: NewtonsoftJsonSuspensionDriver.cs
MangaJaNaiConverterGui/Extensions/: ServiceCollectionExtensions.cs
MangaJaNaiConverterGui/Services/: Downloader.cs  ETACalculator.cs  IPythonService.cs  ISuspensionDriverService.cs  IUpdateManagerService.cs  PythonService.cs  SuspensionDriverService.cs  UpdateManagerService.cs
MangaJaNaiConverterGui/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
MangaJaNaiConverterGui/Views/: MainWindow.axaml  MainWindow.axaml.cs  SettingsWindow.axaml  SettingsWindow.axaml.cs
MangaJaNaiConverterGui/backend/ImageMagick/: Custom Gray Gamma 1.0.icc
MangaJaNaiConverterGui/backend/resources/: default_cli_configuration.json
MangaJaNaiConverterGui/backend/src/: .pre-commit-config.yaml  README.md  accelerator_detection.py  device_list.py  gpu.py  navi.py  node_check.py  progress_controller.py  pyproject.toml  pyrightconfig.json  run_upscale.py  runmangajanaiconverterguiupscale.py  setup.py  test_accelerators.py
MangaJaNaiConverterGui/backend/src/api/: api.py  input.py  lazy.py  node_check.py  node_context.py  output.py  settings.py
MangaJaNaiConverterGui/backend/src/nodes/: condition.py  group.py  groups.py  node_cache.py
MangaJaNaiConverterGui/backend/src/nodes/impl/: blend.py  image_utils.py
MangaJaNaiConverterGui/backend/src/nodes/impl/color/: color.py  convert.py  convert_model.py
MangaJaNaiConverterGui/backend/src/nodes/impl/onnx/: auto_split.py  model.py  onnx_to_ncnn.py  session.py  utils.py
MangaJaNaiConverterGui/backend/src/nodes/impl/pytorch/: auto_split.py  convert_to_onnx_impl.py  utils.py
MangaJaNaiConverterGui/backend/src/nodes/impl/pytorch/architecture/: DAT.py  HAT.py  LaMa.py  SCUNet.py  Swin2SR.py  SwinIR.py
MangaJaNaiConverterGui/backend/src/nodes/impl/pytorch/architecture/OmniSR/: OSA.py
MangaJaNaiConverterGui/backend/src/nodes/impl/pytorch/architecture/face/: codeformer.py  restoreformer_arch.py
MangaJaNaiConverterGui/backend/src/nodes/impl/pytorch/architecture/mat/: utils.py
MangaJaNaiConverterGui/backend/src/nodes/impl/pytorch/architecture/timm/: drop.py  helpers.py
MangaJaNaiConverterGui/backend/src/nodes/impl/pytorch/pix_transform/: auto_split.py  pix_transform_net.py
MangaJaNaiConverterGui/backend/src/nodes/impl/pytorch/rife/: IFNet_HDv3_v4_14_align.py
MangaJaNaiConverterGui/backend/src/nodes/impl/upscale/: auto_split.py  auto_split_tiles.py  basic_upscale.py  convenient_upscale.py  custom_scale.py  exact_split.py  tile_blending.py
MangaJaNaiConverterGui/backend/src/nodes/properties/inputs/: __system_inputs.py  file_inputs.py  generic_inputs.py  image_dropdown_inputs.py  ncnn_inputs.py  numeric_inputs.py  numpy_inputs.py  onnx_inputs.py  pytorch_inputs.py
MangaJaNaiConverterGui/backend/src/nodes/properties/outputs/: file_outputs.py  generic_outputs.py  ncnn_outputs.py  numpy_outputs.py  onnx_outputs.py  pytorch_outputs.py
MangaJaNaiConverterGui/backend/src/nodes/utils/: utils.py
MangaJaNaiConverterGui/backend/src/spandrel_custom/: __init__.py
MangaJaNaiConverterGui/backend/src/spandrel_custom/architectures/FDAT/: __init__.py
(+38 files in other folders)
